--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "meer",
-  "version": "0.0.0",
+  "name": "meer-ui",
+  "version": "0.2.0",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -16,5 +16,18 @@
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "typescript": "^4.1.2",
     "vite": "^2.1.5"
-  }
+  },
+  "description": "A React componets library",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AITuring/Meer.git"
+  },
+  "keywords": ["React", "TypeScript", "Vite"],
+  "author": "AITuring",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/AITuring/Meer/issues"
+  },
+  "homepage": "https://github.com/AITuring/Meer#readme"
 }
