--- a/package.json
+++ b/package.json
@@ -1,33 +1,59 @@
 {
   "name": "meer-ui",
   "version": "0.2.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "serve": "vite preview"
-  },
-  "dependencies": {
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
-  },
-  "devDependencies": {
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@vitejs/plugin-react-refresh": "^1.3.1",
-    "typescript": "^4.1.2",
-    "vite": "^2.1.5"
-  },
   "description": "A React componets library",
   "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AITuring/Meer.git"
   },
-  "keywords": ["React", "TypeScript", "Vite"],
+  "keywords": [
+    "React",
+    "TypeScript",
+    "Vite"
+  ],
   "author": "AITuring",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/AITuring/Meer/issues"
   },
-  "homepage": "https://github.com/AITuring/Meer#readme"
+  "homepage": "https://github.com/AITuring/Meer#readme",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview"
+  },
+  "dependencies": {
+    "babel-eslint": "^10.1.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
+    "@vitejs/plugin-react-refresh": "^1.3.1",
+    "eslint": "^7.30.0",
+    "eslint-config-alloy": "^4.1.0",
+    "eslint-plugin-react": "^7.24.0",
+    "husky": "^4.3.8",
+    "lint-staged": "^11.0.1",
+    "prettier": "^2.3.2",
+    "typescript": "^4.3.5",
+    "vite": "^2.1.5"
+  },
+  "eslintConfig": {
+    "parser": "babel-eslint"
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": [
+      "eslint --cache --fix",
+      "git add"
+    ],
+    "src/**/*.{js,jsx}": [
+      "eslint --cache --fix",
+      "git add"
+    ]
+  }
 }
