--- a/package.json
+++ b/package.json
@@ -21,24 +21,25 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "watch:css": "postcss -w src/index.css -o src/output.css"
   },
   "dependencies": {
     "@types/classnames": "^2.3.1",
     "classnames": "^2.3.1",
+    "postcss-cli": "^8.3.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss7-compat": "^2.2.4",
+    "@tailwindcss/jit": "^0.1.18",
     "@types/node": "^16.3.3",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
-    "autoprefixer": "^9.8.6",
-    "postcss": "^7.0.36",
-    "prettier": "^2.3.2",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4",
+    "autoprefixer": "^10.3.1",
+    "postcss": "^8.3.5",
+    "tailwindcss": "^2.2.4",
     "typescript": "^4.3.5",
     "vite": "^2.1.5"
   }
