--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview",
-    "watch:css": "postcss -w src/index.css -o src/output.css"
+    "serve": "vite preview"
   },
   "dependencies": {
     "@types/classnames": "^2.3.1",
@@ -32,14 +31,10 @@
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
-    "@tailwindcss/jit": "^0.1.18",
     "@types/node": "^16.3.3",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
-    "autoprefixer": "^10.3.1",
-    "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4",
     "typescript": "^4.3.5",
     "vite": "^2.1.5"
   }
