--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
   "dependencies": {
     "@types/classnames": "^2.3.1",
     "classnames": "^2.3.1",
-    "postcss-cli": "^8.3.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
@@ -35,6 +34,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "less": "^4.1.1",
     "typescript": "^4.3.5",
     "vite": "^2.1.5"
   }
