--- a/package.json
+++ b/package.json
@@ -1,41 +1,29 @@
 {
-  "name": "meer-ui",
-  "version": "0.2.0",
-  "description": "A React componets library",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/AITuring/Meer.git"
-  },
-  "keywords": [
-    "React",
-    "TypeScript",
-    "Vite"
-  ],
-  "author": "AITuring",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/AITuring/Meer/issues"
-  },
-  "homepage": "https://github.com/AITuring/Meer#readme",
+  "name": "my-blog",
+  "version": "1.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "serve": "vite preview"
   },
   "dependencies": {
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "@types/classnames": "^2.3.1",
     "classnames": "^2.3.1",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-router-dom": "^5.2.0",
+    "react-tsparticles": "^1.27.0",
+    "react-typewriter-hook": "^1.0.1"
   },
   "devDependencies": {
-    "@types/node": "^16.3.3",
+    "@types/node": "^15.0.2",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "less": "^4.1.1",
-    "typescript": "^4.3.5",
-    "vite": "^2.1.5"
+    "typescript": "^4.1.2",
+    "vite": "^2.4.1",
+    "vite-plugin-compression": "^0.3.0"
   }
 }
