--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meer-ui",
+  "name": "archery",
   "version": "0.3.2",
   "description": "A React componets library",
   "main": "main.tsx",
